# vn2vn

./: .gitignore
src/: main.py  vn_extractor.py
vn2vn/: app.py  pyproject.toml
vn2vn/vn2vn/: filetypes.py  speech2text.py  vn_extractor.py
