[tool.poetry]
name = "vn2vn"
version = "0.1.0"
description = ""
authors = ["Dominux <kir.gimranov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = {extras = ["torch"], version = "^4.53.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
